Revision de botones

--- a/app/src/main/res/layout/activity_teorema_pitagoras.xml
+++ b/app/src/main/res/layout/activity_teorema_pitagoras.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:background="#090909"
     android:onClick="calcula"
-    tools:context=".teoremaPitagoras">
+    tools:context=".teoremaPitagoras"
+    tools:ignore="OnClick">
 
     <EditText
         android:id="@+id/txtladoC"
